<resources>
    <string name="app_name">Orders</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="products">Products</string>
    <string name="make_order">make order</string>
    <string name="see_orders">see orders</string>
    <string name="welcome">Welcome</string>
    <string name="your_orders">Your orders</string>
    <string name="quantity">quantity</string>
    <string name="x">X</string>
    <string name="price">price</string>
    <string name="equal">=</string>
    <string name="total">total</string>
    <string name="make_an_order">MAKE AN ORDER</string>
    <string name="buy">BUY</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">SUBMIT</string>
    <string name="username_exist_error_message">username is already exist</string>
    <string name="passwords_not_matches_error_message">The passwords aren\'t matched</string>
    <string name="required_field_error_message">this field is required</string>
    <string name="log_out">log out</string>
    <string name="manager">manager</string>
    <string name="add_new_product">Add new product</string>
    <string name="product_name">Product Name</string>
    <string name="products_sales_distribution">products details</string>
    <string name="quantity_capital">Quantity</string>
    <string name="price_capital">Price</string>
    <string name="homepage">homepage</string>
    <string name="sort">sort</string>
    <string name="sort_by_quantity">sort by quantity</string>
    <string name="ascendant">ascendant</string>
    <string name="descendant">descendant</string>
    <string name="sort_by_sales">sort by sales</string>
    <string name="add_to_stock">add to\nstock</string>
    <string name="enter_number_of_items_that_you_want_to_add">Enter number of items that you want to add</string>
</resources>