<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.AddNewProductActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/product_name_editText"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_upload_foreground" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/product_name_editText"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textSize="30sp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/quantity_editText"
        app:layout_constraintEnd_toEndOf="@+id/product_image"
        app:layout_constraintStart_toStartOf="@+id/product_image"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/quantity_editText"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:digits="0123456789"
        android:inputType="number"
        android:hint="@string/quantity"
        android:textSize="30sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/price_editText"
        app:layout_constraintEnd_toEndOf="@+id/product_name_editText"
        app:layout_constraintStart_toStartOf="@+id/product_name_editText"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/price_editText"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:digits="0123456789."
        android:inputType="number"
        android:hint="@string/price"
        android:textSize="30sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="@+id/quantity_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/quantity_editText"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>