<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.HomePageActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Welcome Lior!"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/make_order_button"
        android:layout_width="150dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/make_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/see_orders_button"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        android:background="@null"
        android:textColor="@color/colorPrimary"
        android:drawableTop="@mipmap/ic_new_cart_foreground"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/see_orders_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/see_orders"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@+id/make_order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toEndOf="@id/make_order_button"
        app:layout_constraintTop_toTopOf="@+id/make_order_button"
        app:layout_constraintVertical_bias="0.315"
        android:background="@null"
        android:textColor="@color/colorPrimary"
        android:drawableTop="@mipmap/ic_details_foreground"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/starImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/managerTextView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@+id/managerTextView"
        app:layout_constraintEnd_toStartOf="@+id/managerTextView"
        android:layout_marginEnd="5dp"
        app:srcCompat="@mipmap/ic_star" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/managerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/manager"
        app:layout_constraintBottom_toTopOf="@+id/welcome_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_new_product_button"
        android:layout_width="150dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@null"
        android:drawableTop="@mipmap/ic_add_foreground"
        android:text="@string/add_new_product"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/make_order_button"
        app:layout_constraintStart_toStartOf="@+id/make_order_button"
        app:layout_constraintTop_toBottomOf="@+id/make_order_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/products_sales_distribution_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@null"
        android:drawableTop="@mipmap/ic_details_list_foreground"
        android:text="@string/products_sales_distribution"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/add_new_product_button"
        app:layout_constraintEnd_toEndOf="@+id/see_orders_button"
        app:layout_constraintStart_toStartOf="@+id/see_orders_button"
        app:layout_constraintTop_toTopOf="@+id/add_new_product_button" />


</androidx.constraintlayout.widget.ConstraintLayout>